Fixed hidden overflow on inputs

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -473,7 +473,6 @@ code {
   @apply duration-200;
   @apply select-text;
   @apply resize-y;
-  @apply truncate;
   @apply outline-none;
   width: calc(100% - 16px);
 
